--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="IPBAstyle.css">
+<link rel="stylesheet" href="style.css">
 <body>
 
 <section class="image">
